# claude-pulse

./: .gitignore  ClaudeUsageMonitor.spec  README.md  build.bat  claude_usage.py  config.json  requirements.txt  run.bat
.github/workflows/: build-exe.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: data.rs  icon.rs  lib.rs  update.rs
