[package]
name = "app"
version = "2.1.0"
description = "Claude Usage"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = ["tray-icon"] }
ureq = { version = "2", features = ["json"] }
walkdir = "2"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
